--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Java Resume</title>
+  <title>text</title>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/social.css" />
@@ -21,7 +21,7 @@
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
   </button>
-<a class="navbar-brand page-scroll" href="#page-top">Oleg Kramarenko</a>
+<a class="navbar-brand page-scroll" href="#page-top">text</a>
   </div>
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav navbar-right">
