--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html>
+  <head>
     <title>text</title>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/social.css" />
     <link rel="stylesheet" href="css/bootstrap.css" />
@@ -12,8 +10,7 @@
     <link rel="stylesheet" href="css/cards.css" />
     <link rel="stylesheet" href="css/contact.css" />
     <link rel="stylesheet" href="css/buttons.css" />
-</head>
-
+  </head>
 <body id="page-top">
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
@@ -302,5 +299,4 @@
         <script src="js/main.js"></script>
         <script src="js/buttons.js"></script>
     </body>
-
 </html>
