--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <span style="font-size: 16px;"><strong>text</strong> text</span></p>
                 </div>
             </div>
-            <h2 class="section-title"><i class="fa fa-book"></i>Courses</h2>
+            <h2 class="section-title"><i class="fa fa-book"></i>Additional education</h2>
             <div class="item">
                 <div class="meta">
                     <div class="upper-row">
