--- a/index.html
+++ b/index.html
@@ -3,13 +3,8 @@
     <title>text</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/social.css" />
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/cards.css" />
-    <link rel="stylesheet" href="css/contact.css" />
-    <link rel="stylesheet" href="css/buttons.css" />
   </head>
 <body id="page-top">
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
@@ -291,12 +286,11 @@
             </div>
         </div>
         </div>
-        <script type='text/javascript' src='js/demo.js'></script>
+        <script src='js/particle.js'></script>
         <script src="js/jquery.js"></script>
         <script src="js/bootstrap.js"></script>
-        <script src="js/jquery.easing.min.js"></script>
-        <script src="js/jquery.fittext.js"></script>
+        <script src="js/slider.js"></script>
+        <script src="js/menu.js"></script>
         <script src="js/main.js"></script>
-        <script src="js/buttons.js"></script>
     </body>
 </html>
