--- a/index.html
+++ b/index.html
@@ -286,11 +286,6 @@
             </div>
         </div>
         </div>
-        <script src='js/particle.js'></script>
-        <script src="js/jquery.js"></script>
-        <script src="js/bootstrap.js"></script>
-        <script src="js/slider.js"></script>
-        <script src="js/menu.js"></script>
-        <script src="js/main.js"></script>
+        <script src='js/main.js'></script>
     </body>
 </html>
