--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div id="intro">
                 <h1><font>text text</font></h1>
                 <p>
-                    <font size="5" face="Montserrat">Java Software Engineer</font>
+                    <font size="5" face="Montserrat">text</font>
                 </p>
                 <p align="justify">
                     <font size="5" face="Montserrat">text</font>
